docs(deployment): 添加 Render 免费部署指南
- 新增 RENDER_DEPLOYMENT.md 文件，详细说明了如何在 Render 上免费部署项目
- 添加 render.yaml 配置文件，用于自动部署到 Render
- 新增 PostgreSQL 数据库支持，包括数据库初始化和表结构创建
- 提供一键部署到 Render 的按钮链接
- 说明了如何配置环境变量和验证部署
- 列出了其他免费部署方案作为备选
- 优化了性能建议和常见问题解答

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "sqlite3": "^5.1.6",
+    "pg": "^8.11.3",
     "crypto": "^1.0.1",
     "winston": "^3.11.0"
   },
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.10.9",
     "typescript": "^5.3.3",
     "ts-node": "^10.9.1",
     "nodemon": "^3.0.2",
